ent_conf = configuration_data()
ent_conf.set('PACKAGE', 'Graphene')
ent_conf.set('PACKAGE_BUGREPORT', 'https://github.com/ebassi/graphene/issues')
ent_conf.set('PACKAGE_NAME', 'Graphene')
ent_conf.set('PACKAGE_STRING', 'graphene')
ent_conf.set('PACKAGE_TARNAME', 'graphene-' + meson.project_version())
ent_conf.set('PACKAGE_URL', 'http://ebassi.github.io/graphene')
ent_conf.set('PACKAGE_VERSION', meson.project_version())
ent_conf.set('PACKAGE_API_VERSION', graphene_api_version)
configure_file(input: 'gtkdocentities.ent.in', output: 'gtkdocentities.ent', configuration: ent_conf)
